--- a/projecteuler/p1.html
+++ b/projecteuler/p1.html
@@ -7,7 +7,7 @@
         <h2>The Solution:</h2>
             <p>This problem is more of an exercise using the website than in actual coding... But there are some cool tidbits of optimization here.</p>
             <p>This is the naivest approach I can think of:
-                <pre><code>#include <iostream>
+                <pre><code>&#35;include &lt;iostream&gt;
                            using namespace std;
                            
                            int main()
