--- a/projecteuler/p1.html
+++ b/projecteuler/p1.html
@@ -7,22 +7,23 @@
         <h2>The Solution:</h2>
             <p>This problem is more of an exercise using the website than in actual coding... But there are some cool tidbits of optimization here.</p>
             <p>This is the naivest approach I can think of:
-                <pre><code>&#35;include &lt;iostream&gt;
-                           using namespace std;
+                <pre><code>
+&#35;include &lt;iostream&gt;
+using namespace std;
                            
-                           int main()
-                           {
-                               int sum = 0;
-                               for (int i = 0; i < 1000; i++)
-                               {
-                                   if (i % 3 == 0 || i % 5 == 0)
-                                   {
-                                       sum += i;
-                                   }
-                               }
-                               cout << sum << endl;
-                           }
-                           </code></pre></p>
+int main()
+{
+    int sum = 0;
+    for (int i = 0; i < 1000; i++)
+    {
+        if (i % 3 == 0 || i % 5 == 0)
+        {
+            sum += i;
+        }
+    }
+    cout << sum << endl;
+}
+                </code></pre></p>
                            
 
 </body>
