--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <body>
 
 <title>Ello!</title>
-<h1>Rory's website</h1>
+<h1>Rory's Website</h1>
+
+<h2><a href='projecteuler/index.html'>Project Euler Solutions</a></h2>
 
 </body>
 </html>
