--- a/projecteuler/p1.html
+++ b/projecteuler/p1.html
@@ -5,7 +5,7 @@
         <h2>The Problem:</h2>
             <p>If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. The sum of these multiples is 23.<br><br>Find the sum of all the multiples of 3 or 5 below 1000.<p>
         <h2>The Solution:</h2>
-            <p>This problem is more of an exercise using the website than in actual coding... But there are some cool tidbits of optimization here.</p>
+            <p>This problem is more of an exercise using the website than in actual coding... It brings to mind<a href='http://imranontech.com/2007/01/24/using-fizzbuzz-to-find-developers-who-grok-coding/'> this article</a> about programming interviews (as well as the interview I had for my student developer job which employed just this question). But there are some cool tidbits of optimization here.</p>
             <p>This is the naivest approach I can think of:
                 <pre><code>
 &#35;include &lt;iostream&gt;
