--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h3>Links</h3>
                         
                 <ul>
-                    <li><a href="www.xkcd.com">xkcd</a></li>
-                    <li><a href="www.smbc-comics.com">SMBC</a></li>
+                    <li><a href="http://www.xkcd.com">xkcd</a></li>
+                    <li><a href="http://www.smbc-comics.com">SMBC</a></li>
                 </ul>
 </div>
                 
@@ -54,6 +54,7 @@
            	<p>&nbsp;</p>
           <h3>Headline:</h3>
           <p>This will contain whatever I want to catch your attention, right now it's my band <a href='http://www.spacehurricane.com'> Space Hurricane</a>.</a></p>
+       	  <p>&nbsp;</p>
        	  <h3>Purpose</h3>
        	  <p>Have you ever been chest-deep in some project and found yourself utterly lost? Oftentimes your hours of Google searches prove fruitless. Every once in a while however, some nerd has solved your exact problem with a four-line shell script and posted about it on his tech blog. This site is offered up to the CS gods in praise of individuals like this, and in the hopes that I might someday pull a weary, young programmer out of a similar rut. </p>
         	<p>&nbsp;</p>
