--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="icon" type="image/png" href="images/icon.png" />
 <title>Rory's Web Thing</title>
 </head>
 
