Updated About and Index

--- a/about.html
+++ b/about.html
@@ -37,15 +37,17 @@
 					<p>Twenty-one years ago, on the <a href="http://en.wikipedia.org/wiki/Earth_Day">most important day of the year</a>, I - Rory Jacob Snively (rhymes with 'lively') - was born. I grew up in Manhattan Beach, California under the care of my loving parents Heidi and Steve Snively. I spent most of my childhood playing video games and being overly-conscious of my weight. Those were the days. </p>
 					<p>&nbsp;</p>
 				<h3>School</h3>
-					<p>I managed to make it through high school mostly oblivious to the technical side of computing. After being accepted into UCLA's engineering school, I dipped my feet into several areas of study before finally settling on CS. After three years of pootering around, I'm starting to feel somewhat comfortable with this whole "Computron" thing. </p>
+					<p>I managed to make it through high school mostly oblivious to the technical side of computing. After being accepted into UCLA's school of engineering, I dipped my feet into several areas of study before finally settling on CS. After three years of pootering around, I'm starting to feel somewhat comfortable with this whole "computron" thing. </p>
 					<p>&nbsp;</p>
 				<h3>Employment</h3>
 					<p>During high school, I decided to stop being so much of a waste and got my first job at <a href="http://www.thekettle.net">The Kettle</a>. I have learned so much at this restaurant and met so many wonderful people. While it hardly imbued me with any technical skills, it helped me to break out of my shell into the world of adulthood, it keeps me grounded, and it feeds me once a week! </p>
+					<p>&nbsp;</p>
 					<p>Currently, I am a student developer for <a href="http://ccle.ucla.edu">CCLE</a>, UCLA's primary online course management system. This job teaches me more and more every day, and is part of the inspiration for creating this website. </p>
 					<p>&nbsp;</p>
 				<h3>Other Interests</h3>
-					<p>I've always been sort of a beach bum, but it's getting harder and harder for me to convince myself to go outside these days. When I'm forced to partake in physical activity, my sport of choice is racquetball, which I attempt to play once a week with my brother and my dad. I also play bass guitar as much as possible. Check out my <a href="http://www.spacehurricane.com">band</a>!</p>
+					<p>I've always been sort of a beach bum, but it's getting harder and harder for me to convince myself to go outside these days. When I'm forced to partake in physical activity, my sport of choice is racquetball, which I attempt to play once a week with my brother and my dad. I also play bass guitar as much as possible. Check out my <a href="http://www.spacehurricane.com">band</a>! Okay let's be honest for a second: all I do in my spare time is play video games.</p>
 			<p>&nbsp;</p>
+		<div id="content_bottom"></div>
         </div>
 	</div>
 </body>
