fixed footer in about, centered block text

--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
 				<h3>Other Interests</h3>
 					<p>I've always been sort of a beach bum, but it's getting harder and harder for me to convince myself to go outside these days. When I'm forced to partake in physical activity, my sport of choice is racquetball, which I attempt to play once a week with my brother and my dad. I also play bass guitar as much as possible. Check out my <a href="http://www.spacehurricane.com">band</a>! Okay let's be honest for a second: all I do in my spare time is play video games.</p>
 			<p>&nbsp;</p>
+		</div>
 		<div id="content_bottom"></div>
         </div>
 	</div>
