Added contact section

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         
         <div id="content_top"></div>
         <div id="content_main">
-        	<h2>About me.</h2>
+        	<h2>About me</h2>
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
 				<h3>Basic Info</h3>
