Added projects page
Also daft punk

--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
             <li class="menuitem"><a href="index.html">Home</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="blog.html">Blog</a></li>
-            <li class="menuitem"><a href="projects.html">Projects</a></li>
-            <li class="menuitem"><a href="#">Contact</a></li>
+            <li class="menuitem"><a href="#">Projects</a></li>
+            <li class="menuitem"><a href="contact.html">Contact</a></li>
         </ul>
     </div>
         
@@ -30,18 +30,17 @@
         
         <div id="content_top"></div>
         <div id="content_main">
-        	<h2><a href="http://www.youtube.com/watch?v=dRcHTdWY5lU">Contact</a> the Genius Behind This Site</h2>
+        	<h2>All of the big things I have undertaken to small effect</h2>
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
-				<h3>Email</h3>
-					<p>Any rotten tomatoes can be thrown at: rjsnively@gmail.com</p>
+				<h3>Project Euler</h3>
+					<p>A fun coding/puzzle website. It starts of pretty tame, but gets quite intense. If it sparks your interest, you should head over to their site and <a href="http://www.projecteuler.net">try it yourself</a>! Otherwise, spoilers abound in <a href="protecteuler/index.html">my solutions</a>.</p>
 					<p>&nbsp;</p>
-				<h3>Sites</h3>
-					<p><a href="https://github.com/rsnively">Github</a></p>
-					<p><a href="https://www.facebook.com/rory.snively">Facebook</a></p>
+				<h3>This Website</h3>
+					<p>I've never really done much web stuff, so <a href="index.html">this website</a> is my first real foray into online things.</p>
 					<p>&nbsp;</p>
-				<h3>Phone</h3>
-					<p>Buy me dinner first. </p>
+				<h3>Undergrad: The Video Game</h3>
+					<p>A <a href="https://github.com/rsnively/Undergrad">video game</a> project that serves as an excuse for me to familiarize myself with GitHub. </p>
 					<p>&nbsp;</p>
 				<p>&nbsp;</p>
 		</div>
