--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h2>Here lie my ideas, complaints, and stuff I've worked on. Hopefully you find something you like. </h2>
 					<p>&nbsp;</p>
 					<p>&nbsp;</p>
-					<h3>Headline:</h3>
+					<h3>Headline</h3>
 						<p>This will contain whatever I want to catch your attention, right now it's my band <a href='http://www.spacehurricane.com'> Space Hurricane</a>.</p>
 						<p>&nbsp;</p>
 					<h3>Purpose</h3>
