--- a/projects.html
+++ b/projects.html
@@ -34,13 +34,13 @@
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
 				<h3>Project Euler</h3>
-					<p>A fun coding/puzzle website. It starts of pretty tame, but gets quite intense. If it sparks your interest, you should head over to their site and <a href="http://www.projecteuler.net">try it yourself</a>! Otherwise, spoilers abound in <a href="protecteuler/index.html">my solutions</a>.</p>
+					<p>A fun coding/puzzle website. It starts off pretty tame, but gets quite intense. If it sparks your interest, you should head over to their site and <a href="http://www.projecteuler.net">try it yourself</a>! Otherwise, spoilers abound in <a href="projecteuler/index.html">my solutions</a>.</p>
 					<p>&nbsp;</p>
 				<h3>This Website</h3>
 					<p>I've never really done much web stuff, so <a href="index.html">this website</a> is my first real foray into online things.</p>
 					<p>&nbsp;</p>
 				<h3>Undergrad: The Video Game</h3>
-					<p>A <a href="https://github.com/rsnively/Undergrad">video game</a> project that serves as an excuse for me to familiarize myself with GitHub. </p>
+					<p>A <a href="https://github.com/rsnively/Undergrad">video game project</a> that serves as an excuse for me to familiarize myself with GitHub. </p>
 					<p>&nbsp;</p>
 				<p>&nbsp;</p>
 		</div>
