Created Classes section
All files edited to add in link.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li class="menuitem"><a href="#">Home</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="blog.html">Blog</a></li>
+            <li class="menuitem"><a href="classes/index.html">Classes</a></li>
             <li class="menuitem"><a href="projects.html">Projects</a></li>
             <li class="menuitem"><a href="contact.html">Contact</a></li>
         </ul>
