--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
             <li class="menuitem"><a href="index.html">Home</a></li>
             <li class="menuitem"><a href="about.html">About</a></li>
             <li class="menuitem"><a href="blog.html">Blog</a></li>
+            <li class="menuitem"><a href="classes/index.html">Classes</a></li>
             <li class="menuitem"><a href="projects.html">Projects</a></li>
             <li class="menuitem"><a href="#">Contact</a></li>
         </ul>
