Created CS 31 page
Now to write things in it....

--- a/classes/cs31.html
+++ b/classes/cs31.html
@@ -21,7 +21,7 @@
             <li class="menuitem"><a href="../index.html">Home</a></li>
             <li class="menuitem"><a href="../about.html">About</a></li>
             <li class="menuitem"><a href="../blog.html">Blog</a></li>
-            <li class="menuitem"><a href="#">Classes</a></li>
+            <li class="menuitem"><a href="index.html">Classes</a></li>
             <li class="menuitem"><a href="../projects.html">Projects</a></li>
             <li class="menuitem"><a href="../contact.html">Contact</a></li>
         </ul>
@@ -31,23 +31,11 @@
         
         <div id="content_top"></div>
         <div id="content_main">
-        	<h2>Classes I've taken and endeavored to write about</h2>
+        	<h2>Introduction to Computer Science I</h2>
 				<p>&nbsp;</p>
+                <h3>CS 31 - Winter 2011 (Rohr)</h3>
 				<p>&nbsp;</p>
-				<h3>Computer Science</h3>
-					<p><a href="cs31.html">Introduction to Computer Science I</a></p>
-                    <p>Introduction to Computer Science II</p>
-                    <p>Freshman Computer Science Seminar</p>
-					<p>&nbsp;</p>
-				<h3>Electrical Engineering</h3>
-					<p>Electrical Engineering Physics</p>
-                    <p>Physics for Electrical Engineers</p>
-                    <p>Circuit Analysis</p>
-					<p>&nbsp;</p>
-				<h3>Mathematics</h3>
-					<p>Discrete Mathematics</p>
-					<p>&nbsp;</p>
-				<p>&nbsp;</p>
+
 		</div>
 		<div id="content_bottom"></div>
         </div>
