--- a/classes/index.html
+++ b/classes/index.html
@@ -31,25 +31,75 @@
         
         <div id="content_top"></div>
         <div id="content_main">
-        	<h2>Classes I've taken and endeavored to write about</h2>
+        	<h2>Classes I've taken at UCLA. Some of them I have even endeavored to write about!</h2>
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
+                <h3>This Quarter (Fall 2013)</h3>
+                    <p>Computer Science 132 - Compiler Construction</p>
+                    <p>Computer Science 144 - Web Applications</p>
+                    <p>Computer Science 161 - Fundamentals of Artificial Intelligence</p>
+                    <p>Engineering 110 - Introduction to Technology Management and Economics for Engineers</p>
+                    <p>&nbsp;</p>
+                <h3>Chemistry</h3>
+                    <p>Chem 20A - Chemical Structure</p>
+                    <p>Chem 20B - Chemical Energetics and Change</p>
+                    <p>Chem 20L - General Chemistry Laboratory</p>
+                    <p>Chem 30A - Organic Chemistry I: Structure and Reactivity</p>
+                    <p>&nbsp;</p>
 				<h3>Computer Science</h3>
-					<p><a href="cs31.html">Introduction to Computer Science I</a></p>
-                    <p>Introduction to Computer Science II</p>
-                    <p>Freshman Computer Science Seminar</p>
+                    <p>CS 1 - Freshman Computer Science Seminar</p>
+					<p><a href="cs31.html">CS 31 - Introduction to Computer Science I</a></p>
+                    <p>CS 32 - Introduction to Computer Science II</p>
+                    <p>CS 33 - Introduction to Computer Organization</p>
+                    <p>CS 35L - Software Construction Laboratory</p>
+                    <p>CS M51A - Logic Design of Digital Systems</p>
+                    <p>CS 111 - Operating Systems Principles</p>
+                    <p>CS 131 - Programming Languages</p>
+                    <p>CS 143 - Database Systems</p>
+                    <p>CS M151B - Computer Systems Architecture</p>
+                    <p>CS M152A - Introductory Digital Design Laboratory</p>
+                    <p>CS 174A - Introduction to Computer Graphics</p>
+                    <p>CS 180 - Introduction to Algorithms and Complexity</p>
+                    <p>CS 181 - Introduction to Formal Languages and Automata Theory</p>
+                    <p>CS M184 - Introduction to Computational and Systems Biology</p>
 					<p>&nbsp;</p>
 				<h3>Electrical Engineering</h3>
-					<p>Electrical Engineering Physics</p>
-                    <p>Physics for Electrical Engineers</p>
-                    <p>Circuit Analysis</p>
+					<p>EE 1 - Electrical Engineering Physics</p>
+                    <p>EE 2 - Physics for Electrical Engineers</p>
+                    <p>EE 10 - Circuit Theory</p>
 					<p>&nbsp;</p>
+                <h3>Engineering</h3>
+                    <p>Engr 98 - What Students Need to Know about Careers in Engineering</p>
+                    <p>Engr 180 - Engineering of Complex Systems</p>
+                    <p>&nbsp;</p>
 				<h3>Mathematics</h3>
-					<p>Discrete Mathematics</p>
+                    <p>Math 32A - Calculus of Several Variables I</p>
+                    <p>Math 32B - Calculus of Several Variables II</p>
+                    <p>Math 33A - Linear Algebra and Applications</p>
+                    <p>Math 33B - Differential Equations</p>
+					<p>Math 61 - Introduction to Discrete Structures</p>
+                    <p>Math 71SL - Classroom Practices in Elementary School Mathematics</p>
+                    <p>Math 115 - Linear Algebra</p>
+                    <p>&nbsp;</p>
+                <h3>Physics</h3>
+                    <p> Physics 1A - Mechanics</p>
+                    <p> Physics 1B - Oscillations, Waves, Electric and Magnetic Fields</p>
+                    <p> Physics 4AL - Mechanics Laboratory</p>
+                    <p> Physics 4BL - Electricity and Magnetism Laboratory</p>
 					<p>&nbsp;</p>
+                <h3>Other</h3>
+                    <p>Design | Media Arts 9 - Art, Science, and Technology</p>
+                    <p>Earth and Space Science 17 - Dinosaurs and Their Relatives</p>
+                    <p>English Composition 3 - English Composition, Rhetoric, and Language</p>
+                    <p>History 2C - Mystics, Heretics, and Witches in Western Tradition, 1000 to 1600</p>
+                    <p>Linguistics 1 - Introduction to Study of Language</p>
+                    <p>Management 108 - Business Law</p>
+                    <p>Statistics 100A - Introduction to Probability</p>
+                    <p>&nbsp;</p>
 				<p>&nbsp;</p>
 		</div>
 		<div id="content_bottom"></div>
+        <div id="footer"><h3><a href="#">back to top</a></h3></div>
         </div>
 	</div>
 </body>
