--- a/cs124/schedule.html
+++ b/cs124/schedule.html
@@ -25,6 +25,7 @@
     	<div class="link"><a href="home.html">Home</a></div>   
       <div class="link"><a href="#">Weekly Schedule</a></div>
       <div class="link"><a href="w3.html">Week 3</a></div>
+      <div class="link"><a href="w4.html">Week 4</a></div>
     <div id="navBottom"></div>
   </div>
 	<div class="contentColumn">
