w4 link in w3.html

--- a/cs124/w3.html
+++ b/cs124/w3.html
@@ -25,6 +25,7 @@
     	<div class="link"><a href="home.html">Home</a></div>   
       <div class="link"><a href="schedule.html">Weekly Schedule</a></div>
       <div class="link"><a href="#">Week 3</a></div>
+      <div class="link"><a href="w4.html">Week 4</a></div>
     <div id="navBottom"></div>
   </div>
 	<div class="contentColumn">
