--- a/cs124/w3.html
+++ b/cs124/w3.html
@@ -27,6 +27,7 @@
       <div class="link"><a href="#">Week 3</a></div>
       <div class="link"><a href="w4.html">Week 4</a></div>
       <div class="link"><a href="w5.html">Week 5</a></div>
+      <div class="link"><a href="w6.html">Week 6</a></div>
     <div id="navBottom"></div>
   </div>
 	<div class="contentColumn">
