--- a/cs124/w6.html
+++ b/cs124/w6.html
@@ -28,6 +28,7 @@
       <div class="link"><a href="w4.html">Week 4</a></div>
       <div class="link"><a href="w5.html">Week 5</a></div>
       <div class="link"><a href="#">Week 6</a></div>
+      <div class="link"><a href="w7.html">Week 7</a></div>
     <div id="navBottom"></div>
   </div>
 	<div class="contentColumn">
