--- a/cs124/w5.html
+++ b/cs124/w5.html
@@ -29,6 +29,7 @@
       <div class="link"><a href="#">Week 5</a></div>
       <div class="link"><a href="w6.html">Week 6</a></div>
       <div class="link"><a href="w7.html">Week 7</a></div>
+      <div class="link"><a href="w8.html">Week 8</a></div>
     <div id="navBottom"></div>
   </div>
 	<div class="contentColumn">
