--- a/cs124/w8.html
+++ b/cs124/w8.html
@@ -25,11 +25,11 @@
     	<div class="link"><a href="home.html">Home</a></div>   
       <div class="link"><a href="schedule.html">Weekly Schedule</a></div>
       <div class="link"><a href="w3.html">Week 3</a></div>
-      <div class="link"><a href="#">Week 4</a></div>
+      <div class="link"><a href="w4.html">Week 4</a></div>
       <div class="link"><a href="w5.html">Week 5</a></div>
       <div class="link"><a href="w6.html">Week 6</a></div>
       <div class="link"><a href="w7.html">Week 7</a></div>
-      <div class="link"><a href="w8.html">Week 8</a></div>
+      <div class="link"><a href="#">Week 8</a></div>
     <div id="navBottom"></div>
   </div>
 	<div class="contentColumn">
@@ -40,7 +40,7 @@
       <div class="contentTop"></div>
       <div class="contentMain"> 
             <h1>Weekly Progress</h1>
-                <p>This week, I attempted to delve into the mysteries of DNA sequencing assuming everything goes perfectly.</p>
+            <p>This week was mostly about cleaning up my code to allow for simulation with the provided simulation data, and acquiring data for the presentation.</p>
      </div>
      <div class="contentBottom"></div>
    	<!--End Content Box -->
@@ -50,7 +50,7 @@
       <div class="contentTop"></div>
       <div class="contentMain"> 
             <h1>Plan for Next Week</h1>
-                <p>Next week I will put my research to the test by attempting to code my own small-scale DNA sequencer.</p>
+                <p>Presentation!</p>
      </div>
      <div class="contentBottom"></div>
    	<!--End Content Box -->
@@ -62,7 +62,7 @@
       <div class="contentTop"></div>
       <div class="contentMain"> 
             <h1>Grade for Week</h1>
-                <p><b>C</b>: Although I got some research done, I think the midterm got in the way of me putting effort into other aspects of the class, and I did not get started on the sequencer at all.</p>
+                <p><b>B</b>:Everything is looking good, but I didn't get any work done on my presentation yet.<p>
      </div>
      <div class="contentBottom"></div>
    	<!--End Content Box -->
@@ -80,7 +80,7 @@
       <div class="contentTop"></div>
       <div class="contentMain"> 
             <h1>Problems Solved This Week</h1>
-                <p>NaN</p>
+                <p>Scaling</p>
      </div>
      <div class="contentBottom"></div>
    	<!--End Content Box -->
