CS 124 - Added slids and code to website

--- a/cs124/home.html
+++ b/cs124/home.html
@@ -24,6 +24,7 @@
       <p>&nbsp;&nbsp;&nbsp;<img src="images/diagram.png" width=350 alt="Sequencing insertion diagram"></p>
     	<div class="link"><a href="#">Home</a></div>   
       <div class="link"><a href="schedule.html">Weekly Schedule</a></div>
+      <div class="link"><a href="docs.html">Slides &amp; Code</a></div>
       <div class="link"><a href="w3.html">Week 3</a></div>
       <div class="link"><a href="w4.html">Week 4</a></div>
       <div class="link"><a href="w5.html">Week 5</a></div>
