--- a/cs124/docs.html
+++ b/cs124/docs.html
@@ -54,13 +54,13 @@
             <h1>Code</h1>
                 <p><a href="files/cs124.h">cs124.h</a> <em>Declare functions and constants for project.</em></p>
                 &nbsp;
-                <p><a href="files/functions.c">functions.c</a> <em>Define universal functions for project.</em></p>
+                <p><a href="files/functions.cpp">functions.cpp</a> <em>Define universal functions for project.</em></p>
                 &nbsp;
-                <p><a href="files/main.c">main.c</a> <em>Contains genome and read generation as well as file I/O for testing. Contains both improved and baseline methods.</em></p>
+                <p><a href="files/main.cpp">main.cpp</a> <em>Contains genome and read generation as well as file I/O for testing. Contains both improved and baseline methods.</em></p>
                 &nbsp;
                 <p><a href="files/ReferenceGenome.h">ReferenceGenome.h</a> <em>Declares reference genome index structure.</em></p>
                 &nbsp;
-                <p><a href="files/ReferenceGenome.c">ReferenceGenome.c</a> <em>Specifies reference genome indexing algorithm and lookup algorithm.</em></p>
+                <p><a href="files/ReferenceGenome.cpp">ReferenceGenome.cpp</a> <em>Specifies reference genome indexing algorithm and lookup algorithm.</em></p>
      </div>
      <div class="contentBottom"></div>
    	<!--End Content Box -->
